--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ nav li{
   font-color: black;
 }
 
+.menu-footer {
+	list-style-type:none;
+}
+
 @media screen and (max-width: 800px){
   .footer {
     font-size: 10px;
